syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.routeguide";
option java_outer_classname = "RouteGuideProto";

package msgLogic;

service MsgLogic {
    rpc ParseMsg (ParseMsgRequest) returns (ParseMsgResponse){}
}

message ParseMsgRequest {
    bytes data = 1;
}

message ParseMsgResponse {
    string status = 1;
}